# spatial-memory-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES-TRACKER.md  MARKETING.md  README.md  SPATIAL-MEMORY-ARCHITECTURE-DIAGRAMS.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: lint.yml  publish.yml  tests.yml
benchmarks/: hook_coldstart.py  remember_comparison.py
docs/: API.md  BENCHMARKS.md  CLIENT_SETUP_GUIDE.md  COGNITIVE_OFFLOADING_DESIGN.md  CONFIGURATION.md  CONFIGURATION_ALMANAC.md  GETTING_STARTED.md  HOOKS_ARCHITECTURE.md  HOOK_BENCHMARK_RESULTS.md  MCP_SERVER_INSTRUCTIONS.md  TECHNICAL_HIGHLIGHTS.md
plugin/: .mcp.json  mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: dispatcher.py  hook_helpers.py  hooks.json  models.py  pipeline.py  post_tool_use.py  pre_compact.py  queue_writer.py  session_start.py  signal_detection.py  stop.py  transcript_pipeline.py  transcript_reader.py
plugin/scripts/: find_python.cmd  find_python.sh
scripts/: benchmark.py  inspect_db.py  populate_test_data.py  sync_plugin_hooks.py  test_all_tools.py  test_auto_decay.py
spatial_memory/: __init__.py  __main__.py  config.py  factory.py  server.py  verify.py
spatial_memory/adapters/: __init__.py  git_utils.py  lancedb_repository.py  path_utils.py  project_detection.py
spatial_memory/core/: __init__.py  cache.py  circuit_breaker.py  connection_pool.py  consolidation_strategies.py  database.py  db_crud.py  db_export.py  db_idempotency.py  db_indexes.py  db_migrations.py  db_namespace.py  db_search.py  db_stats.py  db_versioning.py  embeddings.py  errors.py  file_security.py  filesystem.py  git_utils.py  hashing.py  import_security.py  lifecycle_ops.py  logging.py  models.py  monorepo_detection.py  path_utils.py  project_detection.py  quality_gate.py  queue_constants.py  queue_file.py  rate_limiter.py  response_types.py  scoring.py  security.py  signal_patterns.py  spatial_ops.py  tracing.py  utils.py  validation.py
spatial_memory/hooks/: __init__.py  content_extractor.py  cursor_adapter.py  dispatcher.py  hook_helpers.py  models.py  overlap_detector.py  pipeline.py  post_tool_use.py  pre_compact.py  queue_writer.py  redaction.py  session_start.py  signal_detection.py  stop.py  transcript_extractor.py  transcript_pipeline.py  transcript_reader.py
spatial_memory/migrations/: __init__.py
spatial_memory/ports/: __init__.py  rate_limiting.py  repositories.py  similarity.py
spatial_memory/services/: __init__.py  decay_manager.py  export_import.py  ingest_pipeline.py  lifecycle.py  memory.py  queue_processor.py  similarity.py  spatial.py  utility.py
spatial_memory/tools/: __init__.py  definitions.py  init_client.py  plugin_mode.py  setup_hooks.py
stubs/lancedb/: __init__.pyi  table.pyi
stubs/mcp/: __init__.pyi
tests/: conftest.py  test_backup_restore.py  test_cli_consolidate.py  test_config.py  test_connection_pool.py  test_database.py  test_embeddings.py  test_enterprise_features.py  test_health.py  test_indexing.py  test_logging.py  test_metrics.py  test_rate_limiter.py  test_ttl_snapshots.py  test_validation.py
tests/integration/: conftest.py  test_auto_decay.py  test_backup_restore.py  test_cognitive_offloading.py  test_concurrent_writes.py  test_cross_corpus_frontend_backend.py  test_cross_corpus_integration.py  test_cross_process_locking.py  test_database.py  test_database_safeguards.py  test_embeddings.py  test_enterprise_features.py  test_indexing.py  test_mcp_server.py  test_namespace_ops.py  test_phase5_tools.py  test_security_edge_cases.py  test_server_v153.py  test_ttl_snapshots.py
tests/unit/: conftest.py  test_cache.py  (+58 more)
(+1 files in other folders)
