[project]
name = "spatial-memory-mcp"
version = "1.11.4"
description = "Spatial bidirectional persistent memory MCP server for LLMs - vector-based semantic memory as a navigable landscape"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "arman-tech"}
]
keywords = ["mcp", "memory", "llm", "vector", "embeddings", "semantic-search", "spatial"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "lancedb>=0.27.0",  # Requires 0.27+ for config-based index API (IvfPq, LinearCombinationReranker)
    "sentence-transformers[onnx]>=4.0.0,<6.0.0",  # Requires 4.0+ for backend="onnx" kwarg; excludes CVE-affected <4.0 transformers
    "mcp>=1.25,<2.0.0",  # Pin <2.0 -- v2 SDK redesigns transport layer + renames core classes
    "numpy>=1.24.0",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.5",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "filelock>=3.12.0",  # Cross-process file locking for multi-instance safety
    "llvmlite>=0.46",  # Transitive dep of hdbscan/umap via numba; pinned for clean uvx
    "numba>=0.63.1",  # Transitive dep of hdbscan/umap; pinned for clean uvx
]

[project.optional-dependencies]
openai = ["openai>=1.0.0", "tiktoken>=0.5.0"]
metrics = ["prometheus_client>=0.20.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "prometheus_client>=0.20.0",  # For testing metrics
]

[project.scripts]
spatial-memory = "spatial_memory.__main__:main"
spatial-memory-mcp = "spatial_memory.__main__:main"

[project.urls]
Homepage = "https://github.com/arman-tech/spatial-memory-mcp"
Repository = "https://github.com/arman-tech/spatial-memory-mcp"
Documentation = "https://github.com/arman-tech/spatial-memory-mcp#readme"
Changelog = "https://github.com/arman-tech/spatial-memory-mcp/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/arman-tech/spatial-memory-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spatial_memory"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

# External libraries without py.typed markers - ignore missing imports
[[tool.mypy.overrides]]
module = [
    "lancedb",
    "lancedb.*",
    "pyarrow",
    "pyarrow.*",
    "hdbscan",
    "hdbscan.*",
    "umap",
    "umap.*",
    "sklearn",
    "sklearn.*",
    "onnxruntime",
    "onnxruntime.*",
    "optimum",
    "optimum.*",
    "openai",
    "openai.*",
    "scipy",
    "scipy.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "tiktoken",
    "tiktoken.*",
    "prometheus_client",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Fast tests with mocked dependencies (no model loading)",
    "integration: Tests with real database and embeddings (slower)",
    "slow: Tests that take more than 1 second",
    "requires_model: Tests that require the embedding model to be loaded",
]
# Default: run only unit tests for fast feedback
# Use 'pytest -m ""' to run all tests
# Use 'pytest -m integration' to run integration tests only
filterwarnings = [
    "ignore::DeprecationWarning",
]
